# auction-intelligence-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: data-quality.md  price-prediction.md  risk-analysis.md
.claude/commands/: add-endpoint.md  db-migrate.md  mask-check.md  new-connector.md  run-checks.md
.claude/memory/: architecture.md  conventions.md  data-model.md  definition-of-done.md  progress.md  roadmap.md  tech-stack.md
alembic/: env.py
alembic/versions/: 838b9842bac0_initial_schema.py
app/: main.py
app/api/: deps.py  router.py
app/core/: config.py  constants.py  database.py  disclaimers.py  logging.py  masking.py  security.py
app/ingestion/: base.py  court_auction_connector.py  mock_onbid_connector.py  mock_real_transaction_connector.py  onbid_connector.py  pipeline.py  real_transaction_connector.py  scheduler.py
app/models/: __init__.py  auction_item.py  auction_result.py  base.py  collection_job.py  notification.py  price_prediction.py  property_transaction.py  raw_source_record.py  real_estate_detail.py  risk_assessment.py  saved_search.py  user.py  user_watchlist.py  vehicle_detail.py
app/repositories/: auction_item_repository.py  prediction_repository.py  raw_source_repository.py  (+2 more)
docs/: frontend-handoff-물건카드.md  개발지시서-v1.0.md
tests/: conftest.py  test_auction_items.py  test_data_quality.py  test_health.py  test_masking.py  test_predictions.py  test_profitability.py  test_real_data_connectors.py  test_saved_searches.py  test_watchlist.py
(+29 files in other folders)
