[project]
name = "auction-intelligence-agent"
version = "0.1.0"
description = "Auction Intelligence Agent — 전국 부동산 경매/공매 정보 통합 검색/분석 FastAPI 백엔드 MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.19",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# 테스트 전체가 하나의 이벤트 루프를 공유하도록 세션 스코프로 고정한다.
# app.core.database의 engine(asyncpg pool)이 모듈 임포트 시 한 번만 생성되는
# 싱글턴이므로, 테스트마다 다른 이벤트 루프를 쓰면 "attached to a different loop"
# RuntimeError가 발생한다.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
